--- a/style.css
+++ b/style.css
@@ -1,108 +1,106 @@
-body{
-    background-image: url(https://thumbs.dreamstime.com/b/d-%D0%BB%D0%B0%D0%BD%D0%B4%D1%88%D0%B0%D1%84%D1%82-%D1%81-%D0%B4%D0%BE%D1%80%D0%BE%D0%B3%D0%BE%D0%B9-%D0%B8-%D0%BD%D0%B5%D0%B1%D0%BE%D0%BC-%D0%BD%D0%B0-%D1%84%D0%BE%D0%BD%D0%B5-%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D1%8B-%D0%BA%D1%80%D0%B0%D1%81%D0%B8%D0%B2%D1%8B%D0%B9-%D0%BF%D0%B5%D0%B9%D0%B7%D0%B0%D0%B6-%D1%84%D0%BE%D0%BD-175932775.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.car{
-    height: 100px;
-    width: 200px;
-    background-color: rgb(224, 224, 11);
-    position: relative;
-    
-    border-radius: 10%;
-    animation-name: move;
-       animation-duration: 4s;
-       animation:linear;
-       animation-fill-mode: forwards;
-       -webkit-animation: linear;
-       -webkit-animation-name:speed;
-       -webkit-animation-duration: 4s;
-       -webkit-animation-fill-mode: forwards;
-       top: 580px;
-       
+.car {
+  height: 100px;
+  width: 200px;
+  background-color: rgb(224, 224, 11);
+  position: relative;
+
+  border-radius: 10%;
+  animation-name: move;
+  animation-duration: 4s;
+  animation: linear;
+  animation-fill-mode: forwards;
+  -webkit-animation: linear;
+  -webkit-animation-name: speed;
+  -webkit-animation-duration: 4s;
+  -webkit-animation-fill-mode: forwards;
+  top: 450px;
 }
-.window1{
-    height: 40px;
-    width: 60px;
-   border-radius: 5%;
-    position: absolute;
-    background-color: blue;
-    left: 20px;
-    top: 10px;
+.window1 {
+  height: 40px;
+  width: 60px;
+  border-radius: 5%;
+  position: absolute;
+  background-color: blue;
+  left: 20px;
+  top: 10px;
 }
-.line{
-    height: 15px;
-    width: 200px;
-    background-color: black;
-    position: absolute;
-    top: 60px;
+.line {
+  height: 15px;
+  width: 200px;
+  background-color: black;
+  position: absolute;
+  top: 60px;
 }
 
-.window2{
-    height: 40px;
-    width: 60px;
-   border-radius: 5%;
-    position: absolute;
-    background-color: blue;
-    left: 120px;
-    top: 10px;
+.window2 {
+  height: 40px;
+  width: 60px;
+  border-radius: 5%;
+  position: absolute;
+  background-color: blue;
+  left: 120px;
+  top: 10px;
 }
-.wheel1{
-    height: 40px;
-    width: 40px;
-    border-radius: 100%;
-    position: absolute;
-    background-color: black;
-    left: 130px;
-    top: 80px;
+.wheel1 {
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  position: absolute;
+  background-color: black;
+  left: 130px;
+  top: 80px;
 }
-.wheel2{
-    height: 40px;
-    width: 40px;
-    border-radius: 100%;
-    position: absolute;
-    background: black;
-    left: 30px;
-    top: 80px;
+.wheel2 {
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  position: absolute;
+  background: black;
+  left: 30px;
+  top: 80px;
 }
-.whitewheel1{
- height: 20px;
- width: 20px;
- border-radius: 100%;
- position: absolute;
- background-color: grey;
- top: 90px;
- left: 40px;
-   
+.whitewheel1 {
+  height: 20px;
+  width: 20px;
+  border-radius: 100%;
+  position: absolute;
+  background-color: grey;
+  top: 90px;
+  left: 40px;
 }
-.whitewheel2{
-    height: 20px;
-    width: 20px;
-    border-radius: 100%;
-    position: absolute;
-    background-color: grey;
-    top: 90px;
-    left: 140px;
+.whitewheel2 {
+  height: 20px;
+  width: 20px;
+  border-radius: 100%;
+  position: absolute;
+  background-color: grey;
+  top: 90px;
+  left: 140px;
 }
- .car:hover {
-    animation-delay: 500ms;
-    }
-    @keyframes speed {
-        from {
-            left: -50%;
-        }
-    
-        to {
-            left: calc(100vw - 250px);
-        }
-    }
-    
-    @-webkit-keyframes speed {
-        from {
-            left: -50%;
-        }
-    
-        to {
-            left: calc(100vw - 250px);
-        }
-    }  
+.car:hover {
+  animation-delay: 500ms;
+}
+@keyframes speed {
+  from {
+    left: -50%;
+  }
+
+  to {
+    left: calc(100vw - 250px);
+  }
+}
+
+@-webkit-keyframes speed {
+  from {
+    left: -50%;
+  }
+
+  to {
+    left: calc(100vw - 250px);
+  }
+}
